fix spacing of arrows

--- a/src/style/main.sass
+++ b/src/style/main.sass
@@ -60,13 +60,12 @@
   p
     margin-top: 50px
   a
+    margin-top: 50px
     span
       display: block
       position: relative
-      left: 50%
       width: 24px
       height: 24px
-      margin-left: -12px
       margin-bottom: -28px
       border-left: 2px solid #009544
       border-bottom: 2px solid #009544
